# next3d

./: .gitignore  PLANNING.md  README.md  pyproject.toml
docs/: AI_AGENT_GUIDE.md
examples/gopro-mount/: README.md  gopro_mount.step  gopro_mount.stl  gopro_mount_assembly.step
src/next3d/: __init__.py
src/next3d/ai/: __init__.py  embeddings.py  interface.py  streaming.py
src/next3d/cli/: __init__.py  main.py
src/next3d/core/: __init__.py  assembly.py  brep.py  design_rules.py  dimensions.py  drawing.py  fea.py  gdt.py  identity.py  manufacturing.py  patterns.py  properties.py  relationships.py  schema.py  sheet_metal.py  sketch.py  spatial.py  step_metadata.py  topology.py  topology_opt.py
src/next3d/features/: __init__.py  bosses.py  chamfers.py  counterbores.py  engine.py  fillets.py  holes.py  slots.py
src/next3d/graph/: __init__.py  multiscale.py  query.py  semantic.py
src/next3d/mcp/: __init__.py  __main__.py
src/next3d/modeling/: kernel.py  operations.py  parametric.py  session.py
src/next3d/parts/: __init__.py  fasteners.py
src/next3d/tools/: executor.py  formats.py  schema.py
tests/: conftest.py  generate_sample_step.py  test_ai_interface.py  test_all_features.py  test_cli.py  test_e2e.py  test_features.py  test_identity.py  test_mcp_server.py  test_modeling.py  test_multiscale.py  test_new_features.py  test_query.py  test_schema.py  test_spatial.py  test_step_metadata.py  test_streaming.py
tests/fixtures/: sample_block.step  sample_boss.step  sample_chamfer.step  sample_complex.step  sample_counterbore.step  sample_multibody.step  sample_pattern.step  sample_slot.step
