[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "next3d"
version = "0.1.0"
description = "AI-native 3D CAD engine — 99 tools for creating, analyzing, and exporting parametric geometry via MCP"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    { name = "Rajesh Akkineni", email = "akkinenirajesh@gmail.com" },
]
keywords = ["cad", "3d", "ai", "mcp", "parametric", "engineering", "sheet-metal", "fea"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cadquery>=2.4",
    "networkx>=3.2",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/buvi-org/next3d"
Repository = "https://github.com/buvi-org/next3d"
Issues = "https://github.com/buvi-org/next3d/issues"

[project.scripts]
next3d = "next3d.cli.main:cli"
next3d-mcp = "next3d.mcp:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/next3d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
